Leveragte MP Config to load application and user properties